--- a/app/website/views/templates/home.html
+++ b/app/website/views/templates/home.html
@@ -5,6 +5,10 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="title">My App</div>
+  <div class="app">
+    <div class="screenshot">image</div>
+    <div class="description">text</div>
+  </div>
 </body>
 </html>
