--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,85 +1,28 @@
-body{
-  max-width: 500px;
-  margin: 0 auto;
+*
+{
+  outline: 1px solid red !important;
+}
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing   : border-box;
+  -ms-box-sizing    : border-box;
 }
 
-a {
-  color: #ac005f;
+.app
+{
+  display: flex;
 }
-a:hover,
-a:focus {
-  text-decoration: underline;
+.description
+{
+  max-width: 705px;
+  color: #7C8B88;
 }
-
-ul{
-  padding: 0;
+.screenshot
+{
+  max-width: 460px;
 }
-
-li{
-  list-style: none;
-}
-
-li.small-image{
-  width: 50px;
-}
-
-li.small-image img{
-  width: 100%;
-}
-
-img{
-  max-width: 230px;
-  max-height: 230px;
-}
-
-.img-wrap {
-  background: #f8f8f8;
-  height: 200px;
-  margin: 0 auto 20px;
-  padding: 10px;
-  width: 200px;
-}
-
-.img-thumbnail {
-  background: none;
-  border: 0;
-  height: auto;
-  max-width: 100%;
-}
-
-.img-thumbnails {
-  margin: 0 auto 10px;
-  width: 200px;
-}
-
-.img-thumbnails .thumbnail {
-  background: #f8f8f8;
-  border: 0;
-  margin-right: 25px;
-  min-height: 50px;
-}
-
-.img-thumbnails .thumbnail:last-child {
-  margin-right: 0;
-}
-
-.nav-pills {
-  margin-bottom: 30px;
-}
-
-.nav-pills > li > a:hover,
-.nav-pills > li > a:focus{
-  color: #ac005f;
-}
-
-.nav-pills > li.active > a,
-.btn-primary,
-.btn-primary:focus {
-  background: #ac005f;
-  border: 0;
-}
-
-.nav-pills > li.active > a:hover,
-.btn-primary:hover {
-  background: #ac005f;
+.title 
+{
+  background-color: #33BEBE;
+  color: white;
 }
