--- a/app/website/views/templates/home.html
+++ b/app/website/views/templates/home.html
@@ -2,13 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="/css/style.css">
   <title>Document</title>
 </head>
 <body>
-  <div class="title">My App</div>
+  <h1 class="title">MY FAVORITE APP</h1>
+
   <div class="app">
-    <div class="screenshot">image</div>
-    <div class="description">text</div>
+    <div class="screenshot"><img src="/images/gem-09.gif" alt="gem"></div>
+    <div class="description">
+      The file tab you see is titled "app.html" in this video, but please name your file "index.html" as described in the previous video.
+      You can add the following placeholder text to your HTML file:
+
+      In ac ipsum quis turpis adipiscing commodo. <em>Mauris fermentum quam</em> in risus eleifend fringilla. <a href="#">Aliquam placerat</a>, ipsum sit amet cursus rhoncus, augue mi tincidunt erat, et consequat velit massa a velit. Cras eleifend lectus nec diam ornare, eu placerat mi ultricies. Etiam tempor iaculis feugiat. Ut tincidunt tempus libero non convallis. Morbi consequat eros eget elit porta porta. Curabitur placerat eros dui, vitae lobortis sapien laoreet ac. Maecenas a lacus diam. Morbi ante lectus, ornare sed suscipit at, tempus elementum purus. Suspendisse sodales hendrerit pharetra. Integer odio risus, convallis eu egestas ac, venenatis nec leo.
+    </div>
   </div>
 </body>
 </html>
