--- a/app/website/views/templates/home.html
+++ b/app/website/views/templates/home.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="/css/style.css">
-  <title>Document</title>
+  <meta charset="utf-8">
+  <title>Framework Test Page</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1 class="title">MY FAVORITE APP</h1>
-
-  <div class="app">
-    <div class="screenshot"><img src="/images/gem-09.gif" alt="gem"></div>
-    <div class="description">
-      The file tab you see is titled "app.html" in this video, but please name your file "index.html" as described in the previous video.
-      You can add the following placeholder text to your HTML file:
-
-      In ac ipsum quis turpis adipiscing commodo. <em>Mauris fermentum quam</em> in risus eleifend fringilla. <a href="#">Aliquam placerat</a>, ipsum sit amet cursus rhoncus, augue mi tincidunt erat, et consequat velit massa a velit. Cras eleifend lectus nec diam ornare, eu placerat mi ultricies. Etiam tempor iaculis feugiat. Ut tincidunt tempus libero non convallis. Morbi consequat eros eget elit porta porta. Curabitur placerat eros dui, vitae lobortis sapien laoreet ac. Maecenas a lacus diam. Morbi ante lectus, ornare sed suscipit at, tempus elementum purus. Suspendisse sodales hendrerit pharetra. Integer odio risus, convallis eu egestas ac, venenatis nec leo.
+  <div class="grid">
+    <div class="row">
+      <div class="col-2">2 Columns</div>
+      <div class="col-10">10 Columns</div>
+    </div>
+    <div class="row">
+      <div class="col-3">3 Columns</div>
+      <div class="col-9">9 Columns</div>
+    </div>
+    <div class="row">
+      <div class="col-4">4 Columns
+      <p> Bacon ipsum dolor sit amet pastrami ribeye sausage, sirloin short ribs pork belly strip steak tenderloin boudin. Landjaeger beef ham hock, doner bacon pork belly filet mignon tenderloin short loin beef ribs tongue. Bresaola salami short ribs venison, pastrami jerky landjaeger. Hamburger meatball cow pork loin ham. Sirloin tail venison jerky kevin. Turducken ribeye sirloin fatback tenderloin short loin. Boudin sirloin tail venison filet mignon rump leberkas landjaeger bacon shank beef ribs ground round. Tail boudin landjaeger rump, chuck shankle leberkas pork belly pork tongue brisket short ribs ground round. Strip steak jowl pork loin beef ribs, ribeye tail spare ribs rump </p>
+      </div>
+      <div class="col-4">4 Columns
+      <p> Bacon ipsum dolor sit amet pastrami ribeye sausage, sirloin short ribs pork belly strip steak tenderloin boudin. Landjaeger beef ham hock, doner bacon pork belly filet mignon tenderloin short loin beef ribs tongue. Bresaola salami short ribs venison, pastrami jerky landjaeger. Hamburger meatball cow pork loin ham. Sirloin tail venison jerky kevin. Turducken ribeye sirloin fatback tenderloin short loin. Boudin sirloin tail venison filet mignon rump leberkas landjaeger bacon shank beef ribs ground round. Tail boudin landjaeger rump, chuck shankle leberkas pork belly pork tongue brisket short ribs ground round. Strip steak jowl pork loin beef ribs, ribeye tail spare ribs rump </p>
+      </div>
+      <div class="col-4">4 Columns
+      <p> Bacon ipsum dolor sit amet pastrami ribeye sausage, sirloin short ribs pork belly strip steak tenderloin boudin. Landjaeger beef ham hock, doner bacon pork belly filet mignon tenderloin short loin beef ribs tongue. Bresaola salami short ribs venison, pastrami jerky landjaeger. Hamburger meatball cow pork loin ham. Sirloin tail venison jerky kevin. Turducken ribeye sirloin fatback tenderloin short loin. Boudin sirloin tail venison filet mignon rump leberkas landjaeger bacon shank beef ribs ground round. Tail boudin landjaeger rump, chuck shankle leberkas pork belly pork tongue brisket short ribs ground round. Strip steak jowl pork loin beef ribs, ribeye tail spare ribs rump </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-3">3 Columns</div>
+      <div class="col-6">6 Columns</div>
+      <div class="col-3">3 Columns</div>
     </div>
   </div>
 </body>
