--- a/app/website/views/templates/home.html
+++ b/app/website/views/templates/home.html
@@ -3,35 +3,62 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+  <!-- <link rel="stylesheet" href="./"> -->
+  <!-- <link rel="stylesheet" href="css/style.css"> -->
+  <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
   <title>Framework Test Page</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  <div class="grid">
+  <div class="container">
     <div class="row">
-      <div class="col-2">2 Columns</div>
-      <div class="col-10">10 Columns
-            <p>Bacon ipsum dolor sit amet pastrami ribeye sausage, sirloin short ribs pork belly strip steak tenderloin boudin. Landjaeger beef ham hock, doner bacon pork belly filet mignon tenderloin short loin beef ribs tongue. Bresaola salami short ribs venison, pastrami jerky landjaeger. Hamburger meatball cow pork loin ham. Sirloin tail venison jerky kevin. Turducken ribeye sirloin fatback tenderloin short loin. Boudin sirloin tail venison filet mignon rump leberkas landjaeger bacon shank beef ribs ground round. Tail boudin landjaeger rump, chuck shankle leberkas pork belly pork tongue brisket short ribs ground round. Strip steak jowl pork loin beef ribs, ribeye tail spare ribs rump</p>
-      </div>
+    <div class="col-md-6">
+      <img class"img-responsive" src="http://placehold.it/100x100" alt="">
     </div>
-    <div class="row">
-      <div class="col-3">3 Columns</div>
-      <div class="col-9">9 Columns</div>
-    </div>
-    <div class="row">
-      <div class="col-4">4 Columns
-      </div>
-      <div class="col-4">4 Columns
-      </div>
-      <div class="col-4">4 Columns
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-3">3 Columns</div>
-      <div class="col-6">6 Columns</div>
-      <div class="col-3">3 Columns</div>
+    <div class="col-md-6 text-right text-uppercase">
+         <h1>andres kwan</h1>
+         <h3>ninja developer</h3>
     </div>
   </div>
+
+  <div class="col-md-12">
+    <img class"img-responsive" src="http://placehold.it/1140x350" alt="">
+  </div>
+
+  <div class="row">
+    <h2>Featured work</h2>  
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <img class"img-responsive" src="http://placehold.it/555x300" alt="">
+      <h3>Appify</h3>
+      <p><a href="http://github.com/">Link to project</a></p>
+    </div>
+
+    <div class="col-md-6">
+      <img class"img-responsive" src="http://placehold.it/555x300" alt="">
+      <h3>Appify</h3>
+      <p><a href="http://github.com/">Link to project</a></p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <img class"img-responsive" src="http://placehold.it/555x300" alt="">
+      <h3>Appify</h3>
+      <p><a href="http://github.com/">Link to project</a></p>
+    </div>
+
+    <div class="col-md-6">
+      <img class"img-responsive" src="http://placehold.it/555x300" alt="">
+      <h3>Appify</h3>
+      <p><a href="http://github.com/">Link to project</a></p>
+    </div>
+  </div>
+
+  </div>
+  
+  <!-- <script src="/bower_components/jquery/dist/jquery.js"></script> -->
 </body>
 </html>
