--- a/app/website/views/templates/home.html
+++ b/app/website/views/templates/home.html
@@ -4,10 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
-  <!-- <link rel="stylesheet" href="./"> -->
-  <!-- <link rel="stylesheet" href="css/style.css"> -->
   <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/style.css">
   <title>Framework Test Page</title>
 </head>
 
@@ -15,7 +13,7 @@
   <div class="container">
     <div class="row">
     <div class="col-md-6">
-      <img class"img-responsive" src="http://placehold.it/100x100" alt="">
+      <img class"img-responsive logo" src="/images/photo.png" alt="udacity logo">
     </div>
     <div class="col-md-6 text-right text-uppercase">
          <h1>andres kwan</h1>
@@ -23,8 +21,10 @@
     </div>
   </div>
 
-  <div class="col-md-12">
-    <img class"img-responsive" src="http://placehold.it/1140x350" alt="">
+  <div class="row">
+    <div class="col-md-12">
+      <img class"img-responsive" src="http://placekitten.com/1140/350" alt="">
+    </div>
   </div>
 
   <div class="row">
@@ -32,26 +32,26 @@
   </div>
   <div class="row">
     <div class="col-md-6">
-      <img class"img-responsive" src="http://placehold.it/555x300" alt="">
+      <img class"img-responsive img-thumbnail" src="http://placekitten.com/555/300" alt="">
       <h3>Appify</h3>
       <p><a href="http://github.com/">Link to project</a></p>
     </div>
 
     <div class="col-md-6">
-      <img class"img-responsive" src="http://placehold.it/555x300" alt="">
+      <img class"img-responsive" src="http://placekitten.com/555/300" alt="">
       <h3>Appify</h3>
       <p><a href="http://github.com/">Link to project</a></p>
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
-      <img class"img-responsive" src="http://placehold.it/555x300" alt="">
+      <img class"img-responsive" src="http://placekitten.com/555/300" alt="">
       <h3>Appify</h3>
       <p><a href="http://github.com/">Link to project</a></p>
     </div>
 
     <div class="col-md-6">
-      <img class"img-responsive" src="http://placehold.it/555x300" alt="">
+      <img class"img-responsive" src="http://placekitten.com/555/300" alt="">
       <h3>Appify</h3>
       <p><a href="http://github.com/">Link to project</a></p>
     </div>
