--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,10 +1,8 @@
-/**
-{
+*{
   outline: 1px solid red !important;
-}*/
+}
 
-*
-{
+*{
   font-family: 'Lato', sans-serif;
 }
 
@@ -20,6 +18,13 @@
   h1 {
     color: red;
   }
+  img
+{
+  display: block;
+  margin-left: auto;
+  margin-right: auto; 
+  width: 300;
+}
 }
 /*iphone 6*/
 @media only screen and (min-width : 375px) and (max-width : 667px) and (orientation : portrait) 
@@ -36,7 +41,11 @@
   } 
 }
 
-
+.logo
+{
+  width:  100px;
+  /*height: 100px;*/
+}
 
 
 /*@media only screen 
@@ -54,7 +63,7 @@ and (max-device-width : 500px)
     width: 100%;
 }
 
-.row {
+/*.row {
     width: 100%;
     margin-bottom:20px;
     display: flex;
@@ -63,59 +72,8 @@ and (max-device-width : 500px)
     display: -ms-flexbox;
     display: -webkit-flex;
     flex-wrap: wrap; 
-}
+}*/
 
-.row p{
-  padding: 10px;
-}
-
-.col-1 {
-    width: 8.33%;
-}
-
-.col-2 {
-    width: 16.66%;
-}
-
-.col-3 {
-    width: 25%;
-}
-
-.col-4 {
-    width: 33.33%;
-}
-
-.col-5 {
-    width: 41.66%;
-}
-
-.col-6 {
-    width: 50%;
-}
-
-.col-7 {
-    width: 58.33%;
-}
-
-.col-8 {
-    width: 66.66%;
-}
-
-.col-9 {
-    width: 75%;
-}
-
-.col-10 {
-    width: 83.33%;
-}
-
-.col-11 {
-    width: 91.66%;
-}
-
-.col-12 {
-    width: 100%;
-}
 
 h1
 {
