--- a/app/website/views/templates/home.html
+++ b/app/website/views/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -12,53 +12,56 @@
 <body>
   <div class="container">
     <div class="row">
-    <div class="col-md-6">
-      <img class"img-responsive logo" src="/images/photo.png" alt="udacity logo">
-    </div>
-    <div class="col-md-6 text-right text-uppercase">
-         <h1>andres kwan</h1>
-         <h3>ninja developer</h3>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-12">
-      <img class"img-responsive" src="http://placekitten.com/1140/350" alt="">
-    </div>
-  </div>
-
-  <div class="row">
-    <h2>Featured work</h2>  
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <img class"img-responsive img-thumbnail" src="http://placekitten.com/555/300" alt="">
-      <h3>Appify</h3>
-      <p><a href="http://github.com/">Link to project</a></p>
+      <div class="col-md-6">
+        <img class"img-responsive logo" src="/images/photo.png" alt="udacity logo">
+      </div>
+      <div class="col-md-6 text-right text-uppercase">
+           <h1>andres kwan</h1>
+           <h4>ninja developer</h4>
+      </div>
     </div>
 
-    <div class="col-md-6">
-      <img class"img-responsive" src="http://placekitten.com/555/300" alt="">
-      <h3>Appify</h3>
-      <p><a href="http://github.com/">Link to project</a></p>
+    <div class="row">
+      <div class="col-md-12">
+        <hr>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <img class"img-responsive" src="http://placekitten.com/555/300" alt="">
-      <h3>Appify</h3>
-      <p><a href="http://github.com/">Link to project</a></p>
+    <div class="row">
+      <div class="col-md-12">
+         <img class="img-responsive" src="http://placekitten.com/1140/350" alt="main image">
+      </div>
     </div>
 
-    <div class="col-md-6">
-      <img class"img-responsive" src="http://placekitten.com/555/300" alt="">
-      <h3>Appify</h3>
-      <p><a href="http://github.com/">Link to project</a></p>
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Featured Work</h2>
+      </div>
     </div>
-  </div>
-
-  </div>
   
+    <div class="row">
+      <div class="col-md-4">
+        <img class="img-responsive" src="http://placekitten.com/550/300" alt="main image">
+        <h3 class="text-uppercase">Applify</h3>
+        <p>Link to github</p>
+      </div>
+      <div class="col-md-4">
+        <img class="img-responsive" src="http://placekitten.com/550/300" alt="main image">
+        <h3 class="text-uppercase">Applify</h3>
+        <p>Link to github</p>
+      </div>
+      <div class="col-md-4">
+        <img class="img-responsive" src="http://placekitten.com/550/300" alt="main image">
+        <h3 class="text-uppercase">Applify</h3>
+        <p>Link to github</p>
+      </div>
+    </div>
+  </div>
   <!-- <script src="/bower_components/jquery/dist/jquery.js"></script> -->
 </body>
 </html>
+
+
+
+
+
+
