--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,30 +1,43 @@
 /**{
   outline: 1px solid red !important;
 }*/
-
-*{
-  font-family: 'Lato', sans-serif;
-}
-
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing   : border-box;
   -ms-box-sizing    : border-box;
 }
 
+body 
+{
+  font-family: 'Lato', sans-serif;
+  color: #747704;
+  font-weight: 300;
+}
+
+.text-mutted
+{
+  color: #BCBBBB;
+}
+.text-thin
+{
+  font-weight: 100;
+}
+#title-logo
+{
+  margin-top: 20px;
+  width: 120px;
+}
+.title-super
+{
+  font-size: 60px;
+}
 /*iphone 5/5s*/
 @media only screen and (min-width : 320px) and (max-width : 568px)
 { /* STYLES GO HERE */ 
   h1 {
     color: red;
   }
-  img
-{
-  /*display: block;*/
-  /*margin-left: auto;*/
-  /*margin-right: auto; */
-  /*width: 300;*/
-}
+ 
 }
 /*iphone 6*/
 @media only screen and (min-width : 375px) and (max-width : 667px) and (orientation : portrait) 
@@ -41,71 +54,3 @@
   } 
 }
 
-.logo
-{
-  /*width:  100px;*/
-  /*height: 100px;*/
-}
-
-
-/*@media only screen 
-and (min-device-width : 500px) 
-and (max-device-width : 500px)
-{
-    body {
-    background-color: blue;
-    /*display: none;*/
-    }
-}*/
-.grid {
-    margin: 0 auto;
-    max-width: 1200px;
-    width: 100%;
-}
-
-/*.row {
-    width: 100%;
-    margin-bottom:20px;
-    display: flex;
-    display: -webkit-box;
-    display: moz-box-flex;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    flex-wrap: wrap; 
-}*/
-
-
-h1
-{
-  /*text-align: right;*/
-  /*margin-bottom: 0;*/
-  /*margin-top: 0;*/
-}
-
-h2
-{
- /* text-align: center;
-  margin-top: 0;
-  margin-bottom: 0;*/
-}
-
-h3
-{
-  /*text-align: center;
-  margin-top: 0;
-  margin-bottom: 0;*/
-}
-
-h4
-{
-  /*text-align: right;*/
-  /*margin-top: 0;*/
-  /*margin-bottom: 0;*/
-}
-
-img
-{
-  /*display: block;*/
-  /*margin-left: auto;*/
-  /*margin-right: auto; */
-}
