--- a/app/website/views/templates/home.html
+++ b/app/website/views/templates/home.html
@@ -18,7 +18,7 @@
         <img id="title-logo" class"img-responsive " src="/images/photo.png" alt="udacity logo">
       </div>
       <div class="col-md-6 text-right text-uppercase">
-           <h1 class="title-super text-thin">andres kwan</h1>
+           <h1 class="lead title-super text-thin">andres kwan</h1>
            <h4>ninja developer</h4>
       </div>
     </div>
@@ -83,32 +83,29 @@
 
   </div>
   <!-- <script src="/bower_components/jquery/dist/jquery.js"></script> -->
-
-
-  
   <script src="/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   
     <div class='footer'>
       <div class='container'>
         <div class='row'>
-          <div class="col-md-3 ">
+          <div class="text-center col-md-3 col-xs-6">
             <h4>Who We Are</h4>
             <p><i>Blasting Off With Bootstrap</i> is the fastest way to space. <a href='tickets.html'>Book your ticket today</a>!</p>
             <p><a href='about.html'>More About Us</a></p>
           </div>
-          <div class="col-md-2 col-md-offset-1 ">
+          <div class="text-center col-md-3 col-xs-6">
             <h4>Links</h4>
-              <ul>
+              <ul class="list-unstyled">
                 <li><a href='/'>Home</a></li>
                 <li><a href='tickets.html'>Tickets</a></li>
                 <li><a href='stations.html'>Stations</a></li>
               </ul>
           </div>
-
-          <div class="col-md-2 ">
+                    <div class="col-xs-12 visible-xs clearfix"></div>
+          <div class="text-center col-md-3 col-xs-6">
             <h4>Stay in Touch</h4>
-              <ul>
+              <ul class="list-unstyled">
                 <li><a href='about.html'>About</a></li>
                 <li><a href='contact.html'>Contact Us</a></li>
                 <li><a href='/blog'>Blog</a></li>
@@ -117,9 +114,9 @@
               </ul>
           </div>
 
-          <div class="col-md-3 col-md-offset-1 ">
+          <div class="text-center col-md-3 col-xs-6">
             <h4>Contact Us</h4>
-              <ul>
+              <ul class="list-unstyled">
                 <li>Orlando, FL</li>
                 <li>1-555-blast-off</li>
                 <li><a href='mailto:blastingoff@codeschool.com'>blastingoff@codeschool.com</a></li>
