--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -14,6 +14,11 @@ body
   font-weight: 300;
 }
 
+footer {
+  background-color: #F88f24;
+  color: white;
+  font-size: 1.2em;
+}
 .text-mutted
 {
   color: #BCBBBB;
