--- a/app/website/views/templates/home.html
+++ b/app/website/views/templates/home.html
@@ -81,51 +81,52 @@
 
 
 
-  </div>
+  
   <!-- <script src="/bower_components/jquery/dist/jquery.js"></script> -->
   <script src="/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  
-    <div class='footer'>
-      <div class='container'>
-        <div class='row'>
-          <div class="text-center col-md-3 col-xs-6">
-            <h4>Who We Are</h4>
-            <p><i>Blasting Off With Bootstrap</i> is the fastest way to space. <a href='tickets.html'>Book your ticket today</a>!</p>
-            <p><a href='about.html'>More About Us</a></p>
-          </div>
-          <div class="text-center col-md-3 col-xs-6">
-            <h4>Links</h4>
-              <ul class="list-unstyled">
-                <li><a href='/'>Home</a></li>
-                <li><a href='tickets.html'>Tickets</a></li>
-                <li><a href='stations.html'>Stations</a></li>
-              </ul>
-          </div>
-                    <div class="col-xs-12 visible-xs clearfix"></div>
-          <div class="text-center col-md-3 col-xs-6">
-            <h4>Stay in Touch</h4>
-              <ul class="list-unstyled">
-                <li><a href='about.html'>About</a></li>
-                <li><a href='contact.html'>Contact Us</a></li>
-                <li><a href='/blog'>Blog</a></li>
-                <li><a href='http://twitter.com/codeschool'>Twitter</a></li>
-                <li><a href='http://facebook.com/codeschool'>Facebook</a></li>
-              </ul>
-          </div>
-
-          <div class="text-center col-md-3 col-xs-6">
-            <h4>Contact Us</h4>
-              <ul class="list-unstyled">
-                <li>Orlando, FL</li>
-                <li>1-555-blast-off</li>
-                <li><a href='mailto:blastingoff@codeschool.com'>blastingoff@codeschool.com</a></li>
-              </ul>
-              <p>Blasting Off With Bootstrap &copy;2214.</p>
+    <footer>
+        <div class='container'>
+          <div class='row'>
+            <div class="text-center col-md-3 col-sm-4 col-xs-12">
+              <h3>Who We Are</h3>
+              <p><i>Blasting Off With Bootstrap</i> is the fastest way to space. <a href='tickets.html'>Book your ticket today</a>!</p>
+              <p><a href='about.html'>More About Us <i class="glyphicon glyphicon-arrow-right"></i></a></p>
+            </div>
+            <div class="col-xs-12 visible-xs clearfix"><hr></div>
+            <div class="text-center col-md-3 col-sm-2 col-xs-6">
+              <h3>Links</h3>
+                <ul class="list-unstyled">
+                  <li><a href='/'>Home</a></li>
+                  <li><a href='tickets.html'>Tickets</a></li>
+                  <li><a href='stations.html'>Stations</a></li>
+                </ul>
+            </div>
+                      
+            <div class="text-center col-md-3 col-sm-2 col-xs-6">
+              <h3>Stay in Touch</h3>
+                <ul class="list-unstyled">
+                  <li><a href='about.html'>About</a></li>
+                  <li><a href='contact.html'>Contact Us</a></li>
+                  <li><a href='/blog'>Blog</a></li>
+                  <li><a href='http://twitter.com/codeschool'>Twitter</a></li>
+                  <li><a href='http://facebook.com/codeschool'>Facebook</a></li>
+                </ul>
+            </div>
+            <div class="col-xs-12 visible-xs clearfix"><hr></div>
+            <div class="text-center col-md-3 col-sm-4 col-xs-12">
+              <h3>Contact Us</h3>
+                <ul class="list-unstyled">
+                  <li>Orlando, FL</li>
+                  <li>1-555-blast-off</li>
+                  <li><a href='mailto:blastingoff@codeschool.com'>blastingoff@codeschool.com</a></li>
+                </ul>
+                <p>Blasting Off With Bootstrap &copy;2214.</p>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
+    </footer>
+  </div>  
 </body>
 </html>
 
