cs - solving footer space - hidden

--- a/app/website/views/templates/home.html
+++ b/app/website/views/templates/home.html
@@ -14,12 +14,12 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 col-sm-4 col-xs-2">
         <img id="title-logo" class"img-responsive " src="/images/photo.png" alt="udacity logo">
       </div>
-      <div class="col-md-6 text-right text-uppercase">
-           <h1 class="lead title-super text-thin">andres kwan</h1>
-           <h4>ninja developer</h4>
+      <div class="col-md-6 col-sm-8 col-xs-10 text-right text-uppercase">
+           <h1 >andres kwan</h1>
+           <h4 class="text-thin">ninja developer</h4>
       </div>
     </div>
 
@@ -28,6 +28,7 @@
         <hr>
       </div>
     </div>
+
     <div class="row">
       <div class="col-md-12">
          <img class="img-responsive" src="http://placekitten.com/1140/350" alt="main image">
@@ -40,7 +41,7 @@
       </div>
     </div>
   
-    <div class="row text-center">
+    <div class="row well weel-lg text-center">
       <div class="col-md-4">
         <img class="img-responsive" 
              data-toggle="modal" 
@@ -61,7 +62,57 @@
       </div>
     </div>
 
-    <!-- Modal -->
+    
+    <div class="footer">
+        <div class='container'>
+          <div class='row'>
+            <div class="col-md-1 hidden-sm "></div>
+            <div class="text-center col-md-3 col-sm-6 col-xs-12">
+              <h3>Who We Are</h3>
+              <p><i>Blasting Off With Bootstrap</i> is the fastest way to space. </p>
+              <p><a href='tickets.html'>Book your ticket today</a>!</p>
+              <p><a href='about.html'>More About Us <i class="glyphicon glyphicon-arrow-right"></i></a></p>
+            </div>
+
+            <div class="col-xs-12 visible-xs clearfix"><hr></div>
+            <div class="text-center col-md-2 hidden-sm  col-xs-6">
+              <h3>Links</h3>
+                <ul class="list-unstyled">
+                  <li><a href='/'>Home</a></li>
+                  <li><a href='tickets.html'>Tickets</a></li>
+                  <li><a href='stations.html'>Stations</a></li>
+                </ul>
+            </div>                      
+            <div class="text-center col-md-2 hidden-sm  col-xs-6">
+              <h3>Stay in Touch</h3>
+                <ul class="list-unstyled">
+                  <li><a href='about.html'>About</a></li>
+                  <li><a href='contact.html'>Contact Us</a></li>
+                  <li><a href='/blog'>Blog</a></li>
+                  <li><a href='http://twitter.com/codeschool'>Twitter</a></li>
+                  <li><a href='http://facebook.com/codeschool'>Facebook</a></li>
+                </ul>
+            </div>
+
+            <div class="col-xs-12 visible-xs clearfix"><hr></div>
+            <div class="text-center col-md-3  col-sm-6 col-xs-12">
+              <h3>Contact Us</h3>
+                <ul class="list-unstyled">
+                  <li>Orlando, FL <i class="glyphicon glyphicon-globe"></i></li>
+                  <li>1-555-blast-off <i class="glyphicon glyphicon-phone"></i></li>
+                  <li><a href='mailto:blastingoff@codeschool.com'>blastingoff@codeschool.com <i class="glyphicon glyphicon-envelope"></i></a></li>
+                </ul>
+                <p>Blasting Off With Bootstrap &copy;2214.</p>
+            </div>
+            <div class="col-md-1 hidden-sm"></div>
+          </div>
+        </div>
+    </div>
+  </div>  
+  <!-- <script src="/bower_components/jquery/dist/jquery.js"></script> -->
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <!-- Modal -->
       <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -78,55 +129,6 @@
           </div>
         </div>
       </div>
-
-
-
-  
-  <!-- <script src="/bower_components/jquery/dist/jquery.js"></script> -->
-  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <footer>
-        <div class='container'>
-          <div class='row'>
-            <div class="text-center col-md-3 col-sm-4 col-xs-12">
-              <h3>Who We Are</h3>
-              <p><i>Blasting Off With Bootstrap</i> is the fastest way to space. <a href='tickets.html'>Book your ticket today</a>!</p>
-              <p><a href='about.html'>More About Us <i class="glyphicon glyphicon-arrow-right"></i></a></p>
-            </div>
-            <div class="col-xs-12 visible-xs clearfix"><hr></div>
-            <div class="text-center col-md-3 col-sm-2 col-xs-6">
-              <h3>Links</h3>
-                <ul class="list-unstyled">
-                  <li><a href='/'>Home</a></li>
-                  <li><a href='tickets.html'>Tickets</a></li>
-                  <li><a href='stations.html'>Stations</a></li>
-                </ul>
-            </div>
-                      
-            <div class="text-center col-md-3 col-sm-2 col-xs-6">
-              <h3>Stay in Touch</h3>
-                <ul class="list-unstyled">
-                  <li><a href='about.html'>About</a></li>
-                  <li><a href='contact.html'>Contact Us</a></li>
-                  <li><a href='/blog'>Blog</a></li>
-                  <li><a href='http://twitter.com/codeschool'>Twitter</a></li>
-                  <li><a href='http://facebook.com/codeschool'>Facebook</a></li>
-                </ul>
-            </div>
-            <div class="col-xs-12 visible-xs clearfix"><hr></div>
-            <div class="text-center col-md-3 col-sm-4 col-xs-12">
-              <h3>Contact Us</h3>
-                <ul class="list-unstyled">
-                  <li>Orlando, FL</li>
-                  <li>1-555-blast-off</li>
-                  <li><a href='mailto:blastingoff@codeschool.com'>blastingoff@codeschool.com</a></li>
-                </ul>
-                <p>Blasting Off With Bootstrap &copy;2214.</p>
-            </div>
-          </div>
-        </div>
-    </footer>
-  </div>  
 </body>
 </html>
 
