--- a/app/website/views/templates/home.html
+++ b/app/website/views/templates/home.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/bower_components/fontawesome/css/font-awesome.min.css">
+  
   <link rel="stylesheet" href="css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
   <title>Framework Test Page</title>
@@ -12,16 +14,30 @@
 
 <body>
   <div class="container">
-
-    <div class="row">
-      <div class="col-md-6 col-sm-4 col-xs-2">
-        <img id="title-logo" class"img-responsive " src="/images/photo.png" alt="udacity logo">
-      </div>
-      <div class="col-md-6 col-sm-8 col-xs-10 text-right text-uppercase">
-           <h1 >andres kwan</h1>
-           <h4 class="text-thin">ninja developer</h4>
-      </div>
-    </div>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <a href="/" class="navbar-brand text-uppercase">andres kwan</a>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href='/'>Home</a></li>
+            <li><a href='/'>Tickets</a></li>
+            <li><a href='/'>Stations</a></li>
+          </ul>
+        </div>
+      </div>  
+    </nav>               
+    
 
     <div class="row">
       <div class="col-md-12">
@@ -41,8 +57,8 @@
       </div>
     </div>
   
-    <div class="row well weel-lg text-center">
-      <div class="col-md-4">
+    <div class="row  text-center">
+      <div class="col-md-4 well well-lg">
         <img class="img-responsive" 
              data-toggle="modal" 
              data-target="#project1" 
@@ -50,12 +66,12 @@
         <h3 class="text-uppercase">Applify</h3>
         <p>Link to github</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 well well-lg">
         <img class="img-responsive" src="http://placekitten.com/550/300" alt="main image">
         <h3 class="text-uppercase">Applify</h3>
         <p>Link to github</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 well well-lg">
         <img class="img-responsive" src="http://placekitten.com/550/300" alt="main image">
         <h3 class="text-uppercase">Applify</h3>
         <p>Link to github</p>
@@ -66,8 +82,8 @@
     <div class="footer">
         <div class='container'>
           <div class='row'>
-            <div class="col-md-1 hidden-sm "></div>
-            <div class="text-center col-md-3 col-sm-6 col-xs-12">
+            <div class="col-md-1 col-sm-1 hidden-xs "></div>
+            <div class="text-center col-md-3 col-sm-3 col-xs-12">
               <h3>Who We Are</h3>
               <p><i>Blasting Off With Bootstrap</i> is the fastest way to space. </p>
               <p><a href='tickets.html'>Book your ticket today</a>!</p>
@@ -75,27 +91,20 @@
             </div>
 
             <div class="col-xs-12 visible-xs clearfix"><hr></div>
-            <div class="text-center col-md-2 hidden-sm  col-xs-6">
-              <h3>Links</h3>
-                <ul class="list-unstyled">
-                  <li><a href='/'>Home</a></li>
-                  <li><a href='tickets.html'>Tickets</a></li>
-                  <li><a href='stations.html'>Stations</a></li>
-                </ul>
-            </div>                      
-            <div class="text-center col-md-2 hidden-sm  col-xs-6">
+            
+            <div class="text-center col-md-4 col-sm-4 col-xs-12">
               <h3>Stay in Touch</h3>
                 <ul class="list-unstyled">
                   <li><a href='about.html'>About</a></li>
                   <li><a href='contact.html'>Contact Us</a></li>
                   <li><a href='/blog'>Blog</a></li>
-                  <li><a href='http://twitter.com/codeschool'>Twitter</a></li>
-                  <li><a href='http://facebook.com/codeschool'>Facebook</a></li>
+                  <li><a href='http://twitter.com/codeschool'><i class="fa fa-twitter-square fa-2x"></i></a></li>
+                  <li><a href='http://facebook.com/codeschool'><i class="fa fa-facebook-official fa-2x"></i></a></li>
                 </ul>
             </div>
-
+          
             <div class="col-xs-12 visible-xs clearfix"><hr></div>
-            <div class="text-center col-md-3  col-sm-6 col-xs-12">
+            <div class="text-center col-md-3  col-sm-3 col-xs-12">
               <h3>Contact Us</h3>
                 <ul class="list-unstyled">
                   <li>Orlando, FL <i class="glyphicon glyphicon-globe"></i></li>
@@ -104,7 +113,7 @@
                 </ul>
                 <p>Blasting Off With Bootstrap &copy;2214.</p>
             </div>
-            <div class="col-md-1 hidden-sm"></div>
+            <div class="col-md-1 col-sm-1 hidden-xs"></div>
           </div>
         </div>
     </div>
