--- a/app/website/views/templates/home.html
+++ b/app/website/views/templates/home.html
@@ -13,8 +13,9 @@
 </head>
 
 <body>
-  <div class="container">
-    <nav class="navbar navbar-default navbar-fixed-top">
+
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
       <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -25,20 +26,23 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav navbar-right">
             <li><a href='/'>Home</a></li>
             <li><a href='/'>Tickets</a></li>
             <li><a href='/'>Stations</a></li>
           </ul>
         </div>
       </div>  
-    </nav>               
+    </div>  
+  </nav>               
     
 
+            
+  <div class="container">
+    
     <div class="row">
       <div class="col-md-12">
         <hr>
